# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  CODE_ENHANCEMENT_REQUEST.md  COMMUNITY_GUIDELINES_VIOLATION_REPORT.md  DEPENDENCY_UPDATE_REQUEST.md  DOCUMENTATION_ERROR.md  DOCUMENTATION_IMPROVEMENT.md  ENVIRONMENT_SETUP_ISSUE.md  FEATURE_REQUEST.md  PERFORMANCE_IMPROVEMENT_PROPOSAL.md  QUESTIONS_OR_HELP.md  REFACTORING_SUGGESTION.md  SECURITY_ISSUE_REPORT.md  TEST_CASE_PROPOSAL.md  USER_STORY.md
.github/actions/build-package/: action.yml
.github/actions/download-logs-and-reports/: action.yml
.github/actions/format/: action.yml
.github/actions/lint/: action.yml
.github/actions/retrieve-tag/: action.yml
.github/actions/security-analysis/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/sonarcloud-analysis/: action.yml
.github/actions/tests/: action.yml
.github/actions/type-analysis/: action.yml
.github/actions/update-version/: action.yml
.github/actions/upload-logs-and-reports/: action.yml
.github/workflows/: build-package.yml  build.yml  coverage.yml  lint.yml  release.yml  run-security-analysis.yml  run-sonarcloud-analysis.yml  run-tests.yml  run-type-analysis.yml  security-check.yml  setup-environment.yml  sonarcloud-check.yml  test-and-coverage.yml  test.yml  type-check.yml
scripts/: build_package.sh  clean.sh  clean_all.sh  clean_timestamp.sh  config.sh  configure_sonar_analysis.sh  format.sh  generate_sonar_project_properties.sh  install.sh  install_dev.sh  lint.sh  package.sh  run_security_analysis.sh  run_tests.sh  run_type_analysis.sh  security_analysis.sh  security_check.sh  test.sh  tests.sh  type_analysis.sh  type_check.sh  update_log_tag.sh  update_version.sh
src/placeholder_package/: __init__.py  main.py
src/project_name/: __init__.py  greet.py  main.py
src/project_name/utils/: __init__.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_greet.py  test_main.py
